[package]
name = "gravylib"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dr. Rubisco <doc@thedocruby.dev>"]
description = "Making GPU-first development a reality, with the power of GPU Rust."
keywords = [
  "rust-gpu",
  "wgpu",
  "compute-shader",
  "vulkan",
  "toolkit",
  "framework",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
futures = { version = "0.3", default-features = false, features = [
  "std",
  "executor",
] }
wgpu = { version = "0.18", features = ["spirv", "vulkan-portability"] }
winit = { version = "0.29", features = [
  "rwh_05" # This is to maintain support with the latest version of wgpu. Should be removed once wgpu implements rwh_06.
  ] }
gravylib_helpers = { path = "./gravylib_helpers" }
gravylib_macros = { path = "./gravylib_macros" }
bytemuck = "1.6.3"

[build-dependencies]
spirv-builder = { version = "=0.9.0", features = ["watch"] }

[workspace]
resolver = "2"
members = ["gravylib_helpers", "gravylib_macros"]

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thedocruby/gravylib"
authors = ["Dr. Rubisco <doc@thedocruby.dev>"]

[workspace.dependencies]
spirv-std = { version = "=0.9.0" }
spirv-std-types = { version = "=0.9.0" }
spirv-std-macros = { version = "=0.9.0" }
spirv-builder = { version = "=0.9.0", default-features = false }
