[package]
name = "gravylib-helpers"
version = "0.1.0-alpha"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std.workspace = true
bytemuck = { version = "1.6.3", features = ["derive"] }