[package]
name = "shaders"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std.workspace = true
# use `gravylib` instead of these when creating your own shader crate
gravylib-helpers = { path = "../../gravylib-helpers" }
gravylib-macros = { path = "../../gravylib-macros" }
